--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "create-react-app": "^3.4.0",
+    "puppeteer": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.8.3",
     "react-scripts": "3.4.0",
@@ -35,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/elvhack/react-meme-generator.git",
+  "author": "Elvan Eroglu <elvan.alwan@gmail.com>",
+  "license": "MIT"
 }
